Add add-exports.