@@ -899,8 +899,16 @@ subprojects {
                 jvmArgs "-Xbootclasspath/p:${configurations.javacJar.asPath}".toString()
             } else {
                 jvmArgs += [
-                        "--illegal-access=warn",
                         "--add-opens", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+                        "--add-exports", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+                        "--add-exports", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+                        "--add-exports", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+                        "--add-exports", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+                        "--add-exports", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+                        "--add-exports", "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+                        "--add-exports", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+                        "--add-exports", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+                        "--add-exports", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
                 ]
             }
 
